fix vertical alignment of alerts

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -125,16 +125,16 @@
     display: block;
     padding-top: 3px;
     padding-bottom: 3px;
+
  }
 
  .alert-sign {
-    font-size: 15px;
     display: inline-block;
     text-align: center;
-    line-height: 22px;
-    width: 22px;
-    height: 22px;
-    background-color: rgba(255, 255, 255, 0.75);
+    line-height: 24px;
+    width: 24px;
+    height: 24px;
+    background-color: rgba(255, 255, 255, 1);
     color: rgba(0, 0, 0, 1);
     border-radius: 50%;
     margin-right: 10px;
